<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ProcessModeData" Id="{97c91acc-3bad-4357-b7e1-ab973e07ac5d}">
    <Declaration><![CDATA[TYPE ProcessModeData EXTENDS DataTag:
STRUCT
	{attribute 'FieldName' := 'executing'}
    executing: BOOL;
	{attribute 'FieldName' := 'message'}
	message: STRING := 'ABC000';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>