<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RecordData" Id="{54c36bd4-1835-4b4c-be1e-05e28c01780d}" SpecialFunc="None">
    <Declaration><![CDATA[(*

Record performance data to influxDB
--------------------------------------------------


* Objects

   Item List:
   
       This is body of item lists
	   
   Second Item:

      This is body of second items.
	  
	  
History
=====================

.. csv-table::
	:header: Rev., Date,Description
	
	0, 2023-01-10,Initial edition
	1. 2023-02-27,Add reStructuredText
	  
*)

PROGRAM RecordData

VAR CONSTANT
	RECORD_DATA_MAX_INDEX: UDINT := 49999;
	TARGET_DBID: UDINT := 1;
END_VAR

VAR
	fb_PLCTaskMeasurement: PLCTaskMeasurement;
	
	// PLC System parameters
     fbGetCurTaskIdx  : GETCURTASKINDEX;
	 
	// Perfromance data buffer
	PerformanceDataRecordBuffer	: ARRAY [0..RECORD_DATA_MAX_INDEX] OF PerformanceData;
	PerformanceDataRecordData :PerformanceData;
	
	// Database throughput data buffer
	DatabaseThroughputRecordBuffer : ARRAY [0..RECORD_DATA_MAX_INDEX] OF DatabaseThroughput;
	DatabaseThroughputRecordData :DatabaseThroughput;
	
	DataBaseProcessModeRecordData	:ProcessModeData;
	

	test_timer :TON; // Inclese workload rate
	bExecuting :BOOL;
	j:UDINT := 0;
	target: UDINT := 5000;
	test_var:ULINT;
	
	process_timer :TON; // Process time

	// For SQL database
	SQLPerformanceRecordDataBuffer	: ARRAY [0..RECORD_DATA_MAX_INDEX] OF SQLPerformanceData;
	SQLPerformanceRecordData		: SQLPerformanceData;
	fbGetSystemTime1				: GetSystemTime;
	dwTimeLoDW: DWORD;
	dwTimeHiDW: DWORD;
	tFileTime: T_FILETIME;
	nTimestamp: LINT;
	
	// Command insert queue
	fbPerfromanceDataCommandBuffer		:RecordDataQueue;
	fbThroughputDataCommandBuffer		:RecordDataQueue;
	fbProcessModeBuffer					:RecordDataQueue;
	fbSQLPerfromanceDataBuffer			:RecordDataQueue;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Create database command queue
GVL.tsdb_command_queue.controller(aData := GVL.tsdb_command_queue.buffer_index);
GVL.psql_command_queue.controller(aData := GVL.psql_command_queue.buffer_index);


// Get ipc data.
fb_PLCTaskMeasurement(ec_master_netid := '169.254.55.71.4.1');


// Add PLC calculation stress step by step.
test_timer(IN := NOT test_timer.Q, PT := T#5M);
IF test_timer.Q THEN
	target := target + 5000;
END_IF

// On processing
process_timer(IN := NOT process_timer.Q, PT := T#30S);

bExecuting := (NOT bExecuting AND process_timer.Q) OR (DataBaseProcessModeRecordData.executing AND NOT process_timer.Q);

IF bExecuting THEN
	FOR j := 0 TO target DO
		test_var := test_var + 1;
	END_FOR
END_IF

IF fb_PLCTaskMeasurement.cpu_usage > 30 THEN
	target := 500;
END_IF

// Tag Data set
DataBaseProcessModeRecordData.machine_id := 'machine-1';
DataBaseProcessModeRecordData.job_id := 'task_info';
// Field data set
DataBaseProcessModeRecordData.executing := bExecuting;
DataBaseProcessModeRecordData.message := Tc2_Standard.CONCAT('LOOP COUNT: ',UDINT_TO_STRING(target));

// Change data to generic type (T_Arg) for insert queue.
fbProcessModeBuffer.data_pointer := F_BIGTYPE(
		pData := ADR(DataBaseProcessModeRecordData), 
		cbLen := SIZEOF(DataBaseProcessModeRecordData)
	);

fbProcessModeBuffer.db_table_name := 'PerformanceData';
fbProcessModeBuffer.data_def_structure_name := 'ProcessModeData';

fbProcessModeBuffer(command_queue := GVL.tsdb_command_queue);


IF process_timer.Q THEN
	fbProcessModeBuffer.record_once();
END_IF

(* Performance Data SQL *)

//Create timestamp
fbGetSystemTime1(timeLoDW=>dwTimeLoDW,timeHiDW=>dwTimeHiDW);
tFileTime.dwLowDateTime := dwTimeLoDW;
tFileTime.dwHighDateTime := dwTimeHiDW;	
MEMCPY(ADR(nTimestamp), ADR(tFileTime), 8);

SQLPerformanceRecordData.time_stamp	:= FILETIME64_TO_DT( F_GetSystemTime() );
SQLPerformanceRecordData.task_time := UDINT_TO_DINT(fb_PLCTaskMeasurement.total_task_time);
SQLPerformanceRecordData.cpu_usage := UDINT_TO_DINT(fb_PLCTaskMeasurement.cpu_usage);
SQLPerformanceRecordData.latency := UDINT_TO_DINT(fb_PLCTaskMeasurement.latency);
SQLPerformanceRecordData.max_latency := UDINT_TO_DINT(fb_PLCTaskMeasurement.max_latency);
SQLPerformanceRecordData.exceed_counter := UDINT_TO_DINT(fb_PLCTaskMeasurement.exceed_counter);
SQLPerformanceRecordData.db_insert_queue_count := UDINT_TO_DINT(GVL.tsdb_command_queue.controller.num_of_data);
SQLPerformanceRecordData.current_index := UDINT_TO_DINT(fbPerfromanceDataCommandBuffer.index);
SQLPerformanceRecordData.next_index := UDINT_TO_DINT(fbPerfromanceDataCommandBuffer.next_index);
SQLPerformanceRecordData.buffer_usage := fbPerfromanceDataCommandBuffer.buffer_usage;


// Set data into specified address on data buffer array.
SQLPerformanceRecordDataBuffer[fbSQLPerfromanceDataBuffer.index] := SQLPerformanceRecordData;

// Change data to generic type (T_Arg) for insert queue.
fbSQLPerfromanceDataBuffer.data_pointer := F_BIGTYPE(
		pData := ADR(PerformanceDataRecordBuffer[fbPerfromanceDataCommandBuffer.index]), 
		cbLen := SIZEOF(PerformanceDataRecordBuffer[fbPerfromanceDataCommandBuffer.index])
	);

// Insert command queue
fbSQLPerfromanceDataBuffer.db_table_name := 'PerformanceData';
fbSQLPerfromanceDataBuffer.data_def_structure_name := 'PerformanceData';
fbSQLPerfromanceDataBuffer.minimum_chunk_size := 500;
fbSQLPerfromanceDataBuffer.upper_bound_of_data_buffer	:= RECORD_DATA_MAX_INDEX;

fbSQLPerfromanceDataBuffer(
	command_queue := GVL.psql_command_queue
);

// cyclic record
// fbSQLPerfromanceDataBuffer.cyclic_record();

(* 
	Performance Data
*)

// Tag Data set
PerformanceDataRecordData.machine_id := 'machine-1';
PerformanceDataRecordData.job_id := 'task_info';

// Field data set
PerformanceDataRecordData.task_time := fb_PLCTaskMeasurement.total_task_time;
PerformanceDataRecordData.cpu_usage := fb_PLCTaskMeasurement.cpu_usage;
PerformanceDataRecordData.latency := fb_PLCTaskMeasurement.latency;
PerformanceDataRecordData.max_latency := fb_PLCTaskMeasurement.max_latency;
PerformanceDataRecordData.exceed_counter := fb_PLCTaskMeasurement.exceed_counter;
PerformanceDataRecordData.ec_frame_rate := fb_PLCTaskMeasurement.ec_frame_rate;
PerformanceDataRecordData.ec_q_frame_rate := fb_PLCTaskMeasurement.ec_q_frame_rate;
PerformanceDataRecordData.ec_lost_frames := fb_PLCTaskMeasurement.ec_lost_frames;
PerformanceDataRecordData.ec_lost_q_frames := fb_PLCTaskMeasurement.ec_lost_q_frames;


// Set data into specified address on data buffer array.
PerformanceDataRecordBuffer[fbPerfromanceDataCommandBuffer.index] := PerformanceDataRecordData;

// Change data to generic type (T_Arg) for insert queue.
fbPerfromanceDataCommandBuffer.data_pointer := F_BIGTYPE(
		pData := ADR(PerformanceDataRecordBuffer[fbPerfromanceDataCommandBuffer.index]), 
		cbLen := SIZEOF(PerformanceDataRecordBuffer[fbPerfromanceDataCommandBuffer.index])
	);

// Insert command queue
fbPerfromanceDataCommandBuffer.db_table_name := 'PerformanceData';
fbPerfromanceDataCommandBuffer.data_def_structure_name := 'PerformanceData';
fbPerfromanceDataCommandBuffer.minimum_chunk_size := 500;
fbPerfromanceDataCommandBuffer.upper_bound_of_data_buffer	:= RECORD_DATA_MAX_INDEX;

fbPerfromanceDataCommandBuffer(
	command_queue := GVL.tsdb_command_queue
);

// cyclic record
fbPerfromanceDataCommandBuffer.cyclic_record();



(*
	Database Throughput data insert buffer
*)


// Tag Data set
DatabaseThroughputRecordData.machine_id := 'machine-1';
DatabaseThroughputRecordData.job_id := 'db_throughput';
// Field data set
DatabaseThroughputRecordData.db_insert_queue_count := GVL.tsdb_command_queue.controller.num_of_data;
DatabaseThroughputRecordData.current_index := fbPerfromanceDataCommandBuffer.index;
DatabaseThroughputRecordData.next_index := fbPerfromanceDataCommandBuffer.next_index;
DatabaseThroughputRecordData.buffer_usage := fbPerfromanceDataCommandBuffer.buffer_usage;

// Set data into specified address on data buffer array.
DatabaseThroughputRecordBuffer[fbThroughputDataCommandBuffer.index] := DatabaseThroughputRecordData;


// Change data to generic type (T_Arg) for insert queue.
fbThroughputDataCommandBuffer.data_pointer := F_BIGTYPE(
		pData := ADR(DatabaseThroughputRecordBuffer[fbThroughputDataCommandBuffer.index]), 
		cbLen := SIZEOF(DatabaseThroughputRecordBuffer[fbThroughputDataCommandBuffer.index])
	);

// Insert command queue
fbThroughputDataCommandBuffer.db_table_name := 'DatabaseThroughput';
fbThroughputDataCommandBuffer.data_def_structure_name := 'DatabaseThroughput';
fbThroughputDataCommandBuffer.minimum_chunk_size := 500;
fbThroughputDataCommandBuffer.upper_bound_of_data_buffer	:= RECORD_DATA_MAX_INDEX;

fbThroughputDataCommandBuffer(
	command_queue := GVL.tsdb_command_queue
); //execute


// cyclic record
fbThroughputDataCommandBuffer.cyclic_record();

]]></ST>
    </Implementation>
    <LineIds Name="RecordData">
      <LineId Id="4074" Count="1" />
      <LineId Id="4251" Count="0" />
      <LineId Id="4250" Count="0" />
      <LineId Id="4076" Count="172" />
      <LineId Id="1026" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>